<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference
        app:key="color_theme"
        app:title="@string/color_theme_gen"
        app:entries="@array/color_theme_gens"
        android:entryValues="@array/color_theme_gens_data"
        android:summary="%s"
        app:defaultValue="1"
        android:icon="@drawable/ic_color_dropper"/>
    <Preference
        app:title="@string/rss_sources"
        android:icon="@drawable/ic_news">
        <intent
            android:targetPackage="io.posidon.android.cintalauncher"
            android:targetClass="io.posidon.android.cintalauncher.ui.settings.feedChooser.FeedSourcesChooserActivity"/>
    </Preference>
    <ListPreference
        app:key="scrollbar_controller"
        app:title="@string/scrollbar_controller"
        app:entries="@array/scrollbar_controllers"
        android:entryValues="@array/scrollbar_controllers_data"
        android:summary="%s"
        app:defaultValue="0"/>
    <PreferenceCategory
        android:title="@string/icons">
        <Preference
            app:title="@string/icon_packs">
            <intent
                android:targetPackage="io.posidon.android.cintalauncher"
                android:targetClass="io.posidon.android.cintalauncher.ui.settings.iconPackPicker.IconPackPickerActivity"/>
        </Preference>
        <SwitchPreference
            android:title="@string/reshape_adaptive_icons"
            android:defaultValue="false"
            android:key="icons:reshape_adaptive"
            android:summary="@string/reshape_adaptive_icons_explanation"/>
    </PreferenceCategory>
</PreferenceScreen>