<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top">
    <TextView
        style="@style/Theme.CintaLauncher.Intro.Slash.Permissions.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permissions"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/Theme.CintaLauncher.Intro.Slash.Permissions.Item.Container">
        <TextView
            style="@style/Theme.CintaLauncher.Intro.Slash.Permissions.Item.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission_storage"/>
        <TextView
            style="@style/Theme.CintaLauncher.Intro.Slash.Permissions.Item.Explanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission_storage_explanation"/>
        <TextView
            style="@style/Theme.CintaLauncher.Intro.Slash.Permissions.Item.Grant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_storage"/>
        <ImageView
            style="@style/Theme.CintaLauncher.Intro.Slash.Permissions.Item.Tick"
            android:id="@+id/tick_storage"
            android:visibility="gone"
            android:src="@drawable/ic_tick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/Theme.CintaLauncher.Intro.Slash.Permissions.Item.Container">
        <TextView
            style="@style/Theme.CintaLauncher.Intro.Slash.Permissions.Item.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission_contacts"/>
        <TextView
            style="@style/Theme.CintaLauncher.Intro.Slash.Permissions.Item.Explanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission_contacts_explanation"/>
        <TextView
            style="@style/Theme.CintaLauncher.Intro.Slash.Permissions.Item.Grant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_contacts"/>
        <ImageView
            style="@style/Theme.CintaLauncher.Intro.Slash.Permissions.Item.Tick"
            android:id="@+id/tick_contacts"
            android:visibility="gone"
            android:src="@drawable/ic_tick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/Theme.CintaLauncher.Intro.Slash.Permissions.Item.Container">
        <TextView
            style="@style/Theme.CintaLauncher.Intro.Slash.Permissions.Item.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission_notifications"/>
        <TextView
            style="@style/Theme.CintaLauncher.Intro.Slash.Permissions.Item.Explanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission_notifications_explanation"/>
        <TextView
            style="@style/Theme.CintaLauncher.Intro.Slash.Permissions.Item.Grant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_notifications"/>
        <ImageView
            style="@style/Theme.CintaLauncher.Intro.Slash.Permissions.Item.Tick"
            android:id="@+id/tick_notifications"
            android:visibility="gone"
            android:src="@drawable/ic_tick"/>
    </LinearLayout>
</LinearLayout>